--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1920, initial-scale=1.0">
-  <title>Статистика матча</title>
+  <title>Статистика матча — контроль</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -11,53 +10,33 @@
       width: 1920px;
       height: 1080px;
       overflow: hidden;
-      background: transparent;
+      background: transparent;            /* важно для альфы в vMix */
       font-family: 'Bebas Neue', Arial, sans-serif;
+      color: #3F3F3E;
+      display: flex;
+      flex-direction: column;
     }
 
+    /* Верх: мастер-окно (то, что идёт в эфир) */
+    .master {
+      position: relative;
+      flex: 0 0 600px;                    /* высота зоны титра */
+    }
+
+    /* Сюда вставлена уже готовая таблица (как в предыдущей версии) */
     .wrap {
       position: absolute;
       left: 260px;
-      top: 260px;
+      top: 140px;
       width: 1400px;
       height: 360px;
-      animation: containerIn 0.7s cubic-bezier(0.55,0.055,0.675,0.19) forwards;
-      opacity: 0;
     }
-
-    /* ==== АНІМАЦИИ (приближенно к GT storyboard) ==== */
-    @keyframes containerIn {
-      0%   { opacity: 0; transform: scale(0.9); }
-      100% { opacity: 1; transform: scale(1); }
-    }
-    @keyframes headerDown {
-      0%   { transform: translateY(-100%); }
-      100% { transform: translateY(0); }
-    }
-    @keyframes fadeInSoft {
-      0%   { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    @keyframes zoomInSoft {
-      0%   { opacity: 0; transform: scale(0.8); }
-      100% { opacity: 1; transform: scale(1); }
-    }
-    @keyframes statIn {
-      0%   { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Фон таблицы из 7fc4... */
     .bg {
       position: absolute;
       inset: 0;
       background: url("images/7fc449d2-1017-489f-a279-c8e569c78174.png") center/cover no-repeat;
       border-radius: 10px;
-      animation: fadeInSoft 0.6s 0.1s forwards;
-      opacity: 0;
     }
-
-    /* Красная шапка + текст */
     .header {
       position: absolute;
       left: 0;
@@ -71,12 +50,13 @@
       color: #FFFFFF;
       font-size: 40px;
       letter-spacing: 1px;
-      animation: headerDown 0.5s 0.2s forwards;
-      transform: translateY(-100%);
-      z-index: 2;
     }
-
-    /* Орнаментная полоска */
+    .logo {
+      margin-left: auto;
+      width: 74px;
+      height: 93px;
+      background: url("images/3e2504f6-73e0-48ec-90df-706b4fb349ec.png") center/contain no-repeat;
+    }
     .ornament {
       position: absolute;
       left: 0;
@@ -84,29 +64,7 @@
       width: 100%;
       height: 30px;
       background: url("images/4c26344a-041d-42f1-b65e-a7751d9c57ea.png") center/cover no-repeat;
-      animation: zoomInSoft 0.4s 0.35s forwards;
-      transform-origin: center;
-      transform: scaleX(0.8);
-      opacity: 0;
-      z-index: 2;
     }
-
-    /* Логотип справа сверху */
-    .logo {
-      position: absolute;
-      right: 30px;
-      top: 12px;
-      width: 74px;
-      height: 93px;
-      background: url("images/3e2504f6-73e0-48ec-90df-706b4fb349ec.png") center/contain no-repeat;
-      animation: zoomInSoft 0.4s 0.45s forwards;
-      transform-origin: center;
-      transform: scale(0.7);
-      opacity: 0;
-      z-index: 3;
-    }
-
-    /* Область содержимого под орнаментом */
     .content {
       position: absolute;
       left: 0;
@@ -117,104 +75,222 @@
       grid-template-columns: 1.3fr 1fr 1fr;
       padding: 40px 80px;
       column-gap: 40px;
-      color: #3F3F3E;
       font-size: 28px;
-      z-index: 3;
     }
-
     .col {
       display: flex;
       flex-direction: column;
-      justify-content: center;
       row-gap: 16px;
     }
+    .col-title-red { font-size: 40px; color: #DA291C; }
+    .col-title     { font-size: 34px; }
+    .row-label     { font-size: 30px; }
+    .value         { font-size: 30px; }
+    .value-red     { font-size: 30px; color: #DA291C; }
 
-    .col-title-red {
-      font-size: 40px;
-      color: #DA291C;
-      animation: statIn 0.35s 0.5s forwards;
-      opacity: 0;
+    /* Низ: панель управления */
+    .controls {
+      flex: 1;
+      background: #111;
+      color: #eee;
+      padding: 12px 24px 24px;
+      font-size: 18px;
+    }
+    .controls h2 {
+      font-size: 22px;
+      margin-bottom: 8px;
+    }
+    .controls-row {
+      display: flex;
+      gap: 24px;
+      flex-wrap: wrap;
+      margin-bottom: 10px;
+    }
+    .field {
+      background: #222;
+      padding: 8px 10px;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .field-label {
+      min-width: 180px;
+    }
+    .team-label {
+      width: 80px;
+      text-align: center;
+      font-weight: 700;
+      color: #ffec99;
+    }
+    .btn {
+      width: 30px;
+      height: 30px;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+      font-weight: 700;
+      background: #444;
+      color: #fff;
+    }
+    .btn:hover { background: #666; }
+    .value-box {
+      min-width: 36px;
+      text-align: center;
+      font-size: 20px;
     }
 
-    .col-title {
-      font-size: 34px;
-      animation: statIn 0.35s 0.55s forwards;
-      opacity: 0;
-    }
-
-    .row-label {
-      font-size: 30px;
-    }
-
-    .value {
-      font-size: 30px;
-    }
-
-    .value-red {
-      color: #DA291C;
-    }
-
-    /* Пошаговая анимация строк (имитируем Zoom Object1..4/Reveal) */
-    .row-label:nth-of-type(1),
-    #team1-shots,
-    #team2-shots { animation: statIn 0.35s 0.6s forwards; opacity: 0; }
-
-    .row-label:nth-of-type(2),
-    #team1-shots-on,
-    #team2-shots-on { animation: statIn 0.35s 0.7s forwards; opacity: 0; }
-
-    .row-label:nth-of-type(3),
-    #team1-faceoff,
-    #team2-faceoff { animation: statIn 0.35s 0.8s forwards; opacity: 0; }
-
-    .row-label:nth-of-type(4),
-    #team1-penalty,
-    #team2-penalty { animation: statIn 0.35s 0.9s forwards; opacity: 0; }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="bg"></div>
+  <!-- ВЕРХ: мастер-окно, которое берёт vMix (альфа-слой) -->
+  <div class="master">
+    <div class="wrap">
+      <div class="bg"></div>
+      <div class="header">
+        <span>СТАТИСТИКА МАТЧА ПОСЛЕ 1 ПЕРИОДА</span>
+        <div class="logo"></div>
+      </div>
+      <div class="ornament"></div>
 
-    <div class="header">
-      <span>СТАТИСТИКА МАТЧА ПОСЛЕ 1 ПЕРИОДА</span>
-      <div class="logo"></div>
+      <div class="content">
+        <!-- Левая колонка — названия параметров -->
+        <div class="col">
+          <div class="col-title-red">КОМАНДА</div>
+          <div class="row-label">БРОСКИ</div>
+          <div class="row-label">БРОСКИ В СТВОР</div>
+          <div class="row-label">ВБРАСЫВАНИЯ</div>
+          <div class="row-label">ШТРАФНЫЕ МИНУТЫ</div>
+        </div>
+
+        <!-- Команда 1 -->
+        <div class="col">
+          <div class="col-title" id="team1-name">КОМАНДА 1</div>
+          <div class="value"     id="t1-shots">0</div>
+          <div class="value-red" id="t1-on">0</div>
+          <div class="value"     id="t1-faceoff">0</div>
+          <div class="value"     id="t1-pen">0</div>
+        </div>
+
+        <!-- Команда 2 -->
+        <div class="col">
+          <div class="col-title" id="team2-name">КОМАНДА 2</div>
+          <div class="value"     id="t2-shots">0</div>
+          <div class="value-red" id="t2-on">0</div>
+          <div class="value"     id="t2-faceoff">0</div>
+          <div class="value"     id="t2-pen">0</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- НИЗ: панель управления оператора -->
+  <div class="controls">
+    <h2>Управление статистикой</h2>
+
+    <!-- Броски -->
+    <div class="controls-row">
+      <div class="field">
+        <div class="field-label">Броски</div>
+
+        <div class="team-label">К1</div>
+        <button class="btn" data-target="t1-shots" data-delta="-1">-</button>
+        <div class="value-box" id="input-t1-shots">0</div>
+        <button class="btn" data-target="t1-shots" data-delta="1">+</button>
+
+        <div class="team-label">К2</div>
+        <button class="btn" data-target="t2-shots" data-delta="-1">-</button>
+        <div class="value-box" id="input-t2-shots">0</div>
+        <button class="btn" data-target="t2-shots" data-delta="1">+</button>
+      </div>
     </div>
 
-    <div class="ornament"></div>
+    <!-- Броски в створ -->
+    <div class="controls-row">
+      <div class="field">
+        <div class="field-label">Броски в створ</div>
 
-    <div class="content">
-      <!-- Левая колонка с названиями параметров -->
-      <div class="col">
-        <div class="col-title-red">КОМАНДА</div>
-        <div class="row-label">БРОСКИ</div>
-        <div class="row-label">БРОСКИ В СТВОР</div>
-        <div class="row-label">ВБРАСЫВАНИЯ</div>
-        <div class="row-label">ШТРАФНЫЕ МИНУТЫ</div>
+        <div class="team-label">К1</div>
+        <button class="btn" data-target="t1-on" data-delta="-1">-</button>
+        <div class="value-box" id="input-t1-on">0</div>
+        <button class="btn" data-target="t1-on" data-delta="1">+</button>
+
+        <div class="team-label">К2</div>
+        <button class="btn" data-target="t2-on" data-delta="-1">-</button>
+        <div class="value-box" id="input-t2-on">0</div>
+        <button class="btn" data-target="t2-on" data-delta="1">+</button>
       </div>
+    </div>
 
-      <!-- Центральная колонка (команда 1) -->
-      <div class="col" id="team1-col">
-        <div class="col-title" id="team1-name">ЦФО2008</div>
-        <div class="value"      id="team1-shots">5</div>
-        <div class="value-red"  id="team1-shots-on">10</div>
-        <div class="value"      id="team1-faceoff">5</div>
-        <div class="value"      id="team1-penalty">5</div>
+    <!-- Вбрасывания -->
+    <div class="controls-row">
+      <div class="field">
+        <div class="field-label">Выигранные вбрасывания</div>
+
+        <div class="team-label">К1</div>
+        <button class="btn" data-target="t1-faceoff" data-delta="-1">-</button>
+        <div class="value-box" id="input-t1-faceoff">0</div>
+        <button class="btn" data-target="t1-faceoff" data-delta="1">+</button>
+
+        <div class="team-label">К2</div>
+        <button class="btn" data-target="t2-faceoff" data-delta="-1">-</button>
+        <div class="value-box" id="input-t2-faceoff">0</div>
+        <button class="btn" data-target="t2-faceoff" data-delta="1">+</button>
       </div>
+    </div>
 
-      <!-- Правая колонка (команда 2) -->
-      <div class="col" id="team2-col">
-        <div class="col-title" id="team2-name">ЦФО2008</div>
-        <div class="value"      id="team2-shots">10</div>
-        <div class="value"      id="team2-shots-on">5</div>
-        <div class="value"      id="team2-faceoff">5</div>
-        <div class="value"      id="team2-penalty">5</div>
+    <!-- Штрафные минуты -->
+    <div class="controls-row">
+      <div class="field">
+        <div class="field-label">Штрафные минуты</div>
+
+        <div class="team-label">К1</div>
+        <button class="btn" data-target="t1-pen" data-delta="-1">-</button>
+        <div class="value-box" id="input-t1-pen">0</div>
+        <button class="btn" data-target="t1-pen" data-delta="1">+</button>
+
+        <div class="team-label">К2</div>
+        <button class="btn" data-target="t2-pen" data-delta="-1">-</button>
+        <div class="value-box" id="input-t2-pen">0</div>
+        <button class="btn" data-target="t2-pen" data-delta="1">+</button>
       </div>
     </div>
   </div>
 
   <script>
-    // сюда потом можно подвязать обновление из API/Sheets
+    // Текущее состояние статистики
+    const state = {
+      't1-shots': 0,
+      't2-shots': 0,
+      't1-on': 0,
+      't2-on': 0,
+      't1-faceoff': 0,
+      't2-faceoff': 0,
+      't1-pen': 0,
+      't2-pen': 0
+    };
+
+    // Обновление видимых значений (верхний титр + нижние поля)
+    function renderStat(id) {
+      const val = state[id];
+      document.getElementById(id).textContent = val;
+      const mirror = document.getElementById('input-' + id);
+      if (mirror) mirror.textContent = val;
+    }
+
+    // Инициализация по нулям
+    Object.keys(state).forEach(renderStat);
+
+    // Обработчик кнопок +/-
+    document.querySelectorAll('.btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const target = btn.dataset.target;
+        const delta = parseInt(btn.dataset.delta, 10);
+        state[target] = Math.max(0, state[target] + delta); // не уходим в минус
+        renderStat(target);
+      });
+    });
   </script>
 </body>
 </html>
