--- a/index.html
+++ b/index.html
@@ -17,20 +17,31 @@
       flex-direction: column;
     }
 
-    /* Верх: мастер-окно (то, что идёт в эфир) */
+    /* ВЕРХ: мастер-слой (для vMix) */
     .master {
       position: relative;
-      flex: 0 0 600px;                    /* высота зоны титра */
+      flex: 0 0 600px;
+      pointer-events: none;               /* чтобы не мешала кликам по форме снизу */
     }
 
-    /* Сюда вставлена уже готовая таблица (как в предыдущей версии) */
+    /* Сам титр, который мы показываем/прячем */
     .wrap {
       position: absolute;
       left: 260px;
       top: 140px;
       width: 1400px;
       height: 360px;
+      opacity: 0;
+      transform: translateY(40px) scale(0.96);
+      transition:
+        opacity 0.4s ease-out,
+        transform 0.4s ease-out;
     }
+    .wrap.visible {
+      opacity: 1;
+      transform: translateY(0) scale(1);
+    }
+
     .bg {
       position: absolute;
       inset: 0;
@@ -65,232 +76,4 @@
       height: 30px;
       background: url("images/4c26344a-041d-42f1-b65e-a7751d9c57ea.png") center/cover no-repeat;
     }
-    .content {
-      position: absolute;
-      left: 0;
-      top: 100px;
-      width: 100%;
-      height: calc(100% - 100px);
-      display: grid;
-      grid-template-columns: 1.3fr 1fr 1fr;
-      padding: 40px 80px;
-      column-gap: 40px;
-      font-size: 28px;
-    }
-    .col {
-      display: flex;
-      flex-direction: column;
-      row-gap: 16px;
-    }
-    .col-title-red { font-size: 40px; color: #DA291C; }
-    .col-title     { font-size: 34px; }
-    .row-label     { font-size: 30px; }
-    .value         { font-size: 30px; }
-    .value-red     { font-size: 30px; color: #DA291C; }
-
-    /* Низ: панель управления */
-    .controls {
-      flex: 1;
-      background: #111;
-      color: #eee;
-      padding: 12px 24px 24px;
-      font-size: 18px;
-    }
-    .controls h2 {
-      font-size: 22px;
-      margin-bottom: 8px;
-    }
-    .controls-row {
-      display: flex;
-      gap: 24px;
-      flex-wrap: wrap;
-      margin-bottom: 10px;
-    }
-    .field {
-      background: #222;
-      padding: 8px 10px;
-      border-radius: 6px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-    .field-label {
-      min-width: 180px;
-    }
-    .team-label {
-      width: 80px;
-      text-align: center;
-      font-weight: 700;
-      color: #ffec99;
-    }
-    .btn {
-      width: 30px;
-      height: 30px;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: 700;
-      background: #444;
-      color: #fff;
-    }
-    .btn:hover { background: #666; }
-    .value-box {
-      min-width: 36px;
-      text-align: center;
-      font-size: 20px;
-    }
-
-  </style>
-</head>
-<body>
-  <!-- ВЕРХ: мастер-окно, которое берёт vMix (альфа-слой) -->
-  <div class="master">
-    <div class="wrap">
-      <div class="bg"></div>
-      <div class="header">
-        <span>СТАТИСТИКА МАТЧА ПОСЛЕ 1 ПЕРИОДА</span>
-        <div class="logo"></div>
-      </div>
-      <div class="ornament"></div>
-
-      <div class="content">
-        <!-- Левая колонка — названия параметров -->
-        <div class="col">
-          <div class="col-title-red">КОМАНДА</div>
-          <div class="row-label">БРОСКИ</div>
-          <div class="row-label">БРОСКИ В СТВОР</div>
-          <div class="row-label">ВБРАСЫВАНИЯ</div>
-          <div class="row-label">ШТРАФНЫЕ МИНУТЫ</div>
-        </div>
-
-        <!-- Команда 1 -->
-        <div class="col">
-          <div class="col-title" id="team1-name">КОМАНДА 1</div>
-          <div class="value"     id="t1-shots">0</div>
-          <div class="value-red" id="t1-on">0</div>
-          <div class="value"     id="t1-faceoff">0</div>
-          <div class="value"     id="t1-pen">0</div>
-        </div>
-
-        <!-- Команда 2 -->
-        <div class="col">
-          <div class="col-title" id="team2-name">КОМАНДА 2</div>
-          <div class="value"     id="t2-shots">0</div>
-          <div class="value-red" id="t2-on">0</div>
-          <div class="value"     id="t2-faceoff">0</div>
-          <div class="value"     id="t2-pen">0</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- НИЗ: панель управления оператора -->
-  <div class="controls">
-    <h2>Управление статистикой</h2>
-
-    <!-- Броски -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Броски</div>
-
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-shots" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-shots">0</div>
-        <button class="btn" data-target="t1-shots" data-delta="1">+</button>
-
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-shots" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-shots">0</div>
-        <button class="btn" data-target="t2-shots" data-delta="1">+</button>
-      </div>
-    </div>
-
-    <!-- Броски в створ -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Броски в створ</div>
-
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-on" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-on">0</div>
-        <button class="btn" data-target="t1-on" data-delta="1">+</button>
-
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-on" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-on">0</div>
-        <button class="btn" data-target="t2-on" data-delta="1">+</button>
-      </div>
-    </div>
-
-    <!-- Вбрасывания -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Выигранные вбрасывания</div>
-
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-faceoff" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-faceoff">0</div>
-        <button class="btn" data-target="t1-faceoff" data-delta="1">+</button>
-
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-faceoff" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-faceoff">0</div>
-        <button class="btn" data-target="t2-faceoff" data-delta="1">+</button>
-      </div>
-    </div>
-
-    <!-- Штрафные минуты -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Штрафные минуты</div>
-
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-pen" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-pen">0</div>
-        <button class="btn" data-target="t1-pen" data-delta="1">+</button>
-
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-pen" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-pen">0</div>
-        <button class="btn" data-target="t2-pen" data-delta="1">+</button>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // Текущее состояние статистики
-    const state = {
-      't1-shots': 0,
-      't2-shots': 0,
-      't1-on': 0,
-      't2-on': 0,
-      't1-faceoff': 0,
-      't2-faceoff': 0,
-      't1-pen': 0,
-      't2-pen': 0
-    };
-
-    // Обновление видимых значений (верхний титр + нижние поля)
-    function renderStat(id) {
-      const val = state[id];
-      document.getElementById(id).textContent = val;
-      const mirror = document.getElementById('input-' + id);
-      if (mirror) mirror.textContent = val;
-    }
-
-    // Инициализация по нулям
-    Object.keys(state).forEach(renderStat);
-
-    // Обработчик кнопок +/-
-    document.querySelectorAll('.btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const target = btn.dataset.target;
-        const delta = parseInt(btn.dataset.delta, 10);
-        state[target] = Math.max(0, state[target] + delta); // не уходим в минус
-        renderStat(target);
-      });
-    });
-  </script>
-</body>
-</html>
+    .conte
