--- a/index.html
+++ b/index.html
@@ -2,395 +2,200 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Статистика матча — контроль</title>
+  <title>Статистика матча — панель</title>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      width: 1920px;
-      height: 1080px;
-      overflow: hidden;
-      background: transparent;            /* важно для альфы в vMix */
-      font-family: 'Bebas Neue', Arial, sans-serif;
-      color: #3F3F3E;
-      display: flex;
-      flex-direction: column;
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{
+      background:#111;
+      color:#eee;
+      font-family:'Bebas Neue',Arial,sans-serif;
+      padding:16px;
     }
-
-    /* ВЕРХ: мастер-слой (для vMix) */
-    .master {
-      position: relative;
-      flex: 0 0 600px;
-      pointer-events: none;               /* чтобы не мешала кликам по форме снизу */
+    h1{font-size:28px;margin-bottom:10px}
+    .row{display:flex;flex-wrap:wrap;gap:16px;margin-bottom:10px}
+    .field{
+      background:#222;
+      padding:8px 10px;
+      border-radius:6px;
+      display:flex;
+      align-items:center;
+      gap:8px;
     }
-
-    /* Сам титр, который мы показываем/прячем */
-    .wrap {
-      position: absolute;
-      left: 260px;
-      top: 140px;
-      width: 1400px;
-      height: 360px;
-      opacity: 0;
-      transform: translateY(40px) scale(0.96);
-      transition:
-        opacity 0.4s ease-out,
-        transform 0.4s ease-out;
+    .label{min-width:170px;font-size:16px}
+    .team-tag{width:70px;text-align:center;color:#ffec99}
+    .btn{
+      width:30px;height:30px;border-radius:4px;border:none;
+      cursor:pointer;font-size:18px;font-weight:700;
+      background:#444;color:#fff;
     }
-    .wrap.visible {
-      opacity: 1;
-      transform: translateY(0) scale(1);
+    .btn:hover{background:#666}
+    .valbox{min-width:36px;text-align:center;font-size:18px}
+    .team-input{
+      width:220px;padding:3px 6px;border-radius:4px;border:1px solid #555;
+      background:#000;color:#fff;font-family:inherit;font-size:18px;
     }
-
-    .bg {
-      position: absolute;
-      inset: 0;
-      background: url("images/7fc449d2-1017-489f-a279-c8e569c78174.png") center/cover no-repeat;
-      border-radius: 10px;
+    .url-box{
+      margin-top:12px;font-size:14px;
     }
-    .header {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 70px;
-      background: #DA291C;
-      display: flex;
-      align-items: center;
-      padding: 0 30px;
-      color: #FFFFFF;
-      font-size: 40px;
-      letter-spacing: 1px;
+    .url{
+      display:block;margin-top:4px;
+      background:#000;padding:4px 6px;border-radius:4px;
+      font-family:monospace;font-size:13px;
+      word-break:break-all;
     }
-    .logo {
-      margin-left: auto;
-      width: 74px;
-      height: 93px;
-      background: url("images/3e2504f6-73e0-48ec-90df-706b4fb349ec.png") center/contain no-repeat;
+    .toggle{
+      padding:6px 14px;border-radius:6px;border:none;
+      cursor:pointer;font-size:16px;font-weight:700;
+      background:#2f9e44;color:#fff;
     }
-    .ornament {
-      position: absolute;
-      left: 0;
-      top: 70px;
-      width: 100%;
-      height: 30px;
-      background: url("images/4c26344a-041d-42f1-b65e-a7751d9c57ea.png") center/cover no-repeat;
-    }
-    .content {
-      position: absolute;
-      left: 0;
-      top: 100px;
-      width: 100%;
-      height: calc(100% - 100px);
-      display: grid;
-      grid-template-columns: 1.3fr 1fr 1fr;
-      padding: 40px 80px;
-      column-gap: 40px;
-      font-size: 28px;
-    }
-    .col {
-      display: flex;
-      flex-direction: column;
-      row-gap: 16px;
-    }
-    .col-title-red { font-size: 40px; color: #DA291C; }
-    .col-title     { font-size: 34px; }
-    .row-label     { font-size: 30px; }
-    .value         { font-size: 30px; }
-    .value-red     { font-size: 30px; color: #DA291C; }
-
-    /* НИЗ: панель управления оператора */
-    .controls {
-      flex: 1;
-      background: #111;
-      color: #eee;
-      padding: 12px 24px 24px;
-      font-size: 18px;
-    }
-    .controls-row {
-      display: flex;
-      gap: 24px;
-      flex-wrap: wrap;
-      margin-bottom: 10px;
-    }
-    .field {
-      background: #222;
-      padding: 8px 10px;
-      border-radius: 6px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-    .field-label {
-      min-width: 180px;
-    }
-    .team-label {
-      width: 80px;
-      text-align: center;
-      font-weight: 700;
-      color: #ffec99;
-    }
-    .btn {
-      width: 30px;
-      height: 30px;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: 700;
-      background: #444;
-      color: #fff;
-    }
-    .btn:hover { background: #666; }
-    .value-box {
-      min-width: 36px;
-      text-align: center;
-      font-size: 20px;
-    }
-
-    /* Кнопка показа титра */
-    .top-bar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 8px;
-    }
-    .toggle-btn {
-      padding: 6px 14px;
-      border-radius: 6px;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: 700;
-      background: #2f9e44;
-      color: #fff;
-    }
-    .toggle-btn.off {
-      background: #c92a2a;
-    }
-    .link-box {
-      font-size: 14px;
-      color: #ccc;
-    }
-    .link-url {
-      font-family: monospace;
-      padding: 2px 6px;
-      background: #222;
-      border-radius: 4px;
-    }
-
-    .team-input {
-      width: 200px;
-      padding: 3px 6px;
-      border-radius: 4px;
-      border: 1px solid #555;
-      background: #000;
-      color: #fff;
-      font-family: inherit;
-      font-size: 18px;
-    }
+    .toggle.off{background:#c92a2a;}
   </style>
 </head>
 <body>
-  <!-- ВЕРХ: мастер-титр -->
-  <div class="master">
-    <div class="wrap" id="title-wrap">
-      <div class="bg"></div>
-      <div class="header">
-        <span>СТАТИСТИКА МАТЧА ПОСЛЕ 1 ПЕРИОДА</span>
-        <div class="logo"></div>
-      </div>
-      <div class="ornament"></div>
+  <h1>Статистика матча — панель управления</h1>
 
-      <div class="content">
-        <!-- Левая колонка — названия параметров -->
-        <div class="col">
-          <div class="col-title-red">КОМАНДА</div>
-          <div class="row-label">БРОСКИ</div>
-          <div class="row-label">БРОСКИ В СТВОР</div>
-          <div class="row-label">ВБРАСЫВАНИЯ</div>
-          <div class="row-label">ШТРАФНЫЕ МИНУТЫ</div>
-        </div>
-
-        <!-- Команда 1 -->
-        <div class="col">
-          <div class="col-title" id="team1-name">КОМАНДА 1</div>
-          <div class="value"     id="t1-shots">0</div>
-          <div class="value-red" id="t1-on">0</div>
-          <div class="value"     id="t1-faceoff">0</div>
-          <div class="value"     id="t1-pen">0</div>
-        </div>
-
-        <!-- Команда 2 -->
-        <div class="col">
-          <div class="col-title" id="team2-name">КОМАНДА 2</div>
-          <div class="value"     id="t2-shots">0</div>
-          <div class="value-red" id="t2-on">0</div>
-          <div class="value"     id="t2-faceoff">0</div>
-          <div class="value"     id="t2-pen">0</div>
-        </div>
-      </div>
+  <div class="row">
+    <div class="field">
+      <span class="label">Название команды 1</span>
+      <input id="t1name" class="team-input" value="КОМАНДА 1">
+    </div>
+    <div class="field">
+      <span class="label">Название команды 2</span>
+      <input id="t2name" class="team-input" value="КОМАНДА 2">
     </div>
   </div>
 
-  <!-- НИЗ: панель управления -->
-  <div class="controls">
-    <div class="top-bar">
-      <div>
-        <button id="toggleTitle" class="toggle-btn off">ПОКАЗАТЬ ТИТР</button>
-      </div>
-      <div class="link-box">
-        Ссылка для vMix:&nbsp;
-        <span class="link-url" id="vmix-link"></span>
-      </div>
+  <!-- Броски -->
+  <div class="row">
+    <div class="field">
+      <span class="label">Броски</span>
+
+      <span class="team-tag">К1</span>
+      <button class="btn" data-key="t1s" data-delta="-1">-</button>
+      <span class="valbox" id="v-t1s">0</span>
+      <button class="btn" data-key="t1s" data-delta="1">+</button>
+
+      <span class="team-tag">К2</span>
+      <button class="btn" data-key="t2s" data-delta="-1">-</button>
+      <span class="valbox" id="v-t2s">0</span>
+      <button class="btn" data-key="t2s" data-delta="1">+</button>
     </div>
+  </div>
 
-    <!-- Названия команд -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Название команды 1</div>
-        <input class="team-input" id="input-team1" value="КОМАНДА 1">
-      </div>
-      <div class="field">
-        <div class="field-label">Название команды 2</div>
-        <input class="team-input" id="input-team2" value="КОМАНДА 2">
-      </div>
+  <!-- Броски в створ -->
+  <div class="row">
+    <div class="field">
+      <span class="label">Броски в створ</span>
+
+      <span class="team-tag">К1</span>
+      <button class="btn" data-key="t1on" data-delta="-1">-</button>
+      <span class="valbox" id="v-t1on">0</span>
+      <button class="btn" data-key="t1on" data-delta="1">+</button>
+
+      <span class="team-tag">К2</span>
+      <button class="btn" data-key="t2on" data-delta="-1">-</button>
+      <span class="valbox" id="v-t2on">0</span>
+      <button class="btn" data-key="t2on" data-delta="1">+</button>
     </div>
+  </div>
 
-    <!-- Броски -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Броски</div>
+  <!-- Вбрасывания -->
+  <div class="row">
+    <div class="field">
+      <span class="label">Выигранные вбрасывания</span>
 
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-shots" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-shots">0</div>
-        <button class="btn" data-target="t1-shots" data-delta="1">+</button>
+      <span class="team-tag">К1</span>
+      <button class="btn" data-key="t1f" data-delta="-1">-</button>
+      <span class="valbox" id="v-t1f">0</span>
+      <button class="btn" data-key="t1f" data-delta="1">+</button>
 
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-shots" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-shots">0</div>
-        <button class="btn" data-target="t2-shots" data-delta="1">+</button>
-      </div>
+      <span class="team-tag">К2</span>
+      <button class="btn" data-key="t2f" data-delta="-1">-</button>
+      <span class="valbox" id="v-t2f">0</span>
+      <button class="btn" data-key="t2f" data-delta="1">+</button>
     </div>
+  </div>
 
-    <!-- Броски в створ -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Броски в створ</div>
+  <!-- Штрафные -->
+  <div class="row">
+    <div class="field">
+      <span class="label">Штрафные минуты</span>
 
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-on" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-on">0</div>
-        <button class="btn" data-target="t1-on" data-delta="1">+</button>
+      <span class="team-tag">К1</span>
+      <button class="btn" data-key="t1p" data-delta="-1">-</button>
+      <span class="valbox" id="v-t1p">0</span>
+      <button class="btn" data-key="t1p" data-delta="1">+</button>
 
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-on" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-on">0</div>
-        <button class="btn" data-target="t2-on" data-delta="1">+</button>
-      </div>
+      <span class="team-tag">К2</span>
+      <button class="btn" data-key="t2p" data-delta="-1">-</button>
+      <span class="valbox" id="v-t2p">0</span>
+      <button class="btn" data-key="t2p" data-delta="1">+</button>
     </div>
+  </div>
 
-    <!-- Вбрасывания -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Выигранные вбрасывания</div>
+  <div class="row">
+    <button id="toggle" class="toggle off">ТИТР ВЫКЛЮЧЕН</button>
+  </div>
 
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-faceoff" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-faceoff">0</div>
-        <button class="btn" data-target="t1-faceoff" data-delta="1">+</button>
-
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-faceoff" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-faceoff">0</div>
-        <button class="btn" data-target="t2-faceoff" data-delta="1">+</button>
-      </div>
-    </div>
-
-    <!-- Штрафные минуты -->
-    <div class="controls-row">
-      <div class="field">
-        <div class="field-label">Штрафные минуты</div>
-
-        <div class="team-label">К1</div>
-        <button class="btn" data-target="t1-pen" data-delta="-1">-</button>
-        <div class="value-box" id="input-t1-pen">0</div>
-        <button class="btn" data-target="t1-pen" data-delta="1">+</button>
-
-        <div class="team-label">К2</div>
-        <button class="btn" data-target="t2-pen" data-delta="-1">-</button>
-        <div class="value-box" id="input-t2-pen">0</div>
-        <button class="btn" data-target="t2-pen" data-delta="1">+</button>
-      </div>
-    </div>
+  <div class="url-box">
+    URL для vMix (Web Browser input / Overlay):
+    <span class="url" id="url"></span>
   </div>
 
   <script>
-    // ---- состояние статистики ----
-    const state = {
-      't1-shots': 0,
-      't2-shots': 0,
-      't1-on': 0,
-      't2-on': 0,
-      't1-faceoff': 0,
-      't2-faceoff': 0,
-      't1-pen': 0,
-      't2-pen': 0
-    };
+    const state = {t1s:0,t2s:0,t1on:0,t2on:0,t1f:0,t2f:0,t1p:0,t2p:0};
+    let show = false;
 
-    function renderStat(id) {
-      const val = state[id];
-      document.getElementById(id).textContent = val;
-      const mirror = document.getElementById('input-' + id);
-      if (mirror) mirror.textContent = val;
+    function clamp(v){return v<0?0:v;}
+
+    function renderNumbers(){
+      for (const k in state){
+        document.getElementById('v-'+k).textContent = state[k];
+      }
     }
 
-    Object.keys(state).forEach(renderStat);
+    function buildUrl(){
+      const base = location.origin + location.pathname.replace(/index\.html?$/,'') + 'title.html';
+      const p = new URLSearchParams();
+      p.set('show', show ? '1':'0');
+      p.set('t1name', document.getElementById('t1name').value || 'КОМАНДА 1');
+      p.set('t2name', document.getElementById('t2name').value || 'КОМАНДА 2');
+      for (const k in state){
+        p.set(k, state[k]);
+      }
+      const full = base + '?' + p.toString();
+      document.getElementById('url').textContent = full;
+    }
 
-    document.querySelectorAll('.btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const target = btn.dataset.target;
-        const delta = parseInt(btn.dataset.delta, 10);
-        state[target] = Math.max(0, state[target] + delta);
-        renderStat(target);
+    document.querySelectorAll('.btn').forEach(btn=>{
+      btn.addEventListener('click',()=>{
+        const key = btn.dataset.key;
+        const d = parseInt(btn.dataset.delta,10);
+        state[key] = clamp(state[key]+d);
+        renderNumbers();
+        buildUrl();
       });
     });
 
-    // ---- названия команд (редактируемые поля) ----
-    const team1Input = document.getElementById('input-team1');
-    const team2Input = document.getElementById('input-team2');
+    document.getElementById('t1name').addEventListener('input', buildUrl);
+    document.getElementById('t2name').addEventListener('input', buildUrl);
 
-    function syncTeams() {
-      document.getElementById('team1-name').textContent = team1Input.value || 'КОМАНДА 1';
-      document.getElementById('team2-name').textContent = team2Input.value || 'КОМАНДА 2';
-    }
-    team1Input.addEventListener('input', syncTeams);
-    team2Input.addEventListener('input', syncTeams);
-    syncTeams();
-
-    // ---- кнопка показа/скрытия титра с анимацией ----
-    const toggleBtn = document.getElementById('toggleTitle');
-    const titleWrap = document.getElementById('title-wrap');
-    let titleVisible = false;
-
-    toggleBtn.addEventListener('click', () => {
-      titleVisible = !titleVisible;
-      if (titleVisible) {
-        titleWrap.classList.add('visible');
-        toggleBtn.classList.remove('off');
-        toggleBtn.textContent = 'СКРЫТЬ ТИТР';
-      } else {
-        titleWrap.classList.remove('visible');
-        toggleBtn.classList.add('off');
-        toggleBtn.textContent = 'ПОКАЗАТЬ ТИТР';
+    const toggle = document.getElementById('toggle');
+    toggle.addEventListener('click',()=>{
+      show = !show;
+      if(show){
+        toggle.textContent = 'ТИТР ВКЛЮЧЕН';
+        toggle.classList.remove('off');
+      }else{
+        toggle.textContent = 'ТИТР ВЫКЛЮЧЕН';
+        toggle.classList.add('off');
       }
+      buildUrl();
     });
 
-    // ---- ссылка для вставки в vMix ----
-    // В GitHub Pages её можно оставить статичной или подставлять hostname:
-    const url = window.location.href.split('#')[0];
-    document.getElementById('vmix-link').textContent = url;
+    renderNumbers();
+    buildUrl();
   </script>
 </body>
 </html>
